# nl2sparql

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  evaluation.md  langgraph_architecture.md  synthetic_data.md
nl2sparql/: __init__.py  __main__.py  cli.py  config.py
nl2sparql/agent/: __init__.py  graph.py  nodes.py  state.py
nl2sparql/constraints/: __init__.py  base.py  compositional.py  emotion.py  lexical_relation.py  multi_entry.py  prompt_builder.py  semantic.py  translation.py
nl2sparql/data/: ontology.json  sparql_queries_examples.json  sparql_queries_final.json  test_dataset.json
nl2sparql/evaluation/: __init__.py  batch_evaluate.py  evaluate.py
nl2sparql/generation/: __init__.py  adapters.py  synthesizer.py
nl2sparql/llm/: __init__.py  anthropic_client.py  base.py  gemini_client.py  mistral_client.py  ollama_client.py  openai_client.py
nl2sparql/mcp/: __init__.py  __main__.py  resources.py  server.py  tools.py
nl2sparql/retrieval/: __init__.py  bm25.py  embeddings.py  hybrid_retriever.py  ontology_retriever.py  patterns.py
nl2sparql/synthetic/: __init__.py  generator.py
nl2sparql/validation/: __init__.py  endpoint.py  semantic.py  syntax.py
notebooks/: quickstart.ipynb
scripts/: gradio_app.py  gradio_app_agent.py  test_mcp_tools.py
